Closed Bug 385250 Opened 17 years ago Closed 17 years ago

IsVoid and IsTerminated may return something other than PR_TRUE and PR_FALSE

Categories

(Core :: XPCOM, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: bent.mozilla, Assigned: bent.mozilla)

Details

Attachments

(1 file)

Attached patch PatchSplinter Review
http://lxr.mozilla.org/seamonkey/source/xpcom/string/public/nsTSubstring.h#184

Simple problem, the IsVoid function returns '2' instead of '1' for a PRBool.
Attachment #269134 - Flags: superreview?(darin.moz)
Attachment #269134 - Flags: review?(dbaron)
Attachment #269134 - Flags: superreview?(darin.moz) → superreview?(jag)
Attachment #269134 - Flags: superreview?(jag) → superreview+
Comment on attachment 269134 [details] [diff] [review]
Patch

a=bzbarsky
Attachment #269134 - Flags: approval1.9? → approval1.9+
Assignee: nobody → bent.mozilla
Fixed.
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Component: String → XPCOM
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: