Bug 385250 - "IsVoid and IsTerminated may return something other than PR_TRUE and PR_FALSE". r=dbaron, sr=jag, a=bz.